[REFACTOR/TM-128] 주석 추가 및 리팩토링(필요 없는 필드 제외 및 필드 추가)